tests/netconvert/import/XML/errors/broken_edge/edge#id__empty4/errors.netconvert
Error: Attribute 'id' in definition of a edge is empty.
Quitting (on error).
